<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pear</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_fragment_patientlist">Patient List</string>
    <string name="action_setting">Setting</string>
    <string name="action_patient_search">Search Patient</string>
    <string name="action_ocr">Scan Document (OCR)</string>
    <string name="no_search_patient_result_notif">There is currently no patient with \'%1$s\' in their firstName</string>
    <string name="no_search_patient_result_notif1">There is no patient with searched name: \'%1$s\'</string>
    <string name="no_patient_notif">Currently there is no patient registered</string>
    <string name="nav_patient_list">Patient List</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_account">Account</string>
    <string name="nav_care_center_config">Care Center Configuration</string>
    <string name="title_activity_create_patient">Create Patient</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_patient_form">Create Patient</string>
    <string name="select_date_of_birth">Select patient date of birth</string>
    <string name="action_allergy_edit">Edit</string>
    <string name="action_allergy_delete">Delete</string>
    <string name="select_time_add_new_vital">Select the time of which vital is measured</string>
    <string name="add_new_prescription">Add New Prescription</string>
    <string name="add_new_routine">Add New Routine</string>
    <string name="select_prescription_start_date">Select prescription start date</string>
    <string name="select_prescription_end_date">Select prescription end date</string>
    <string name="select_routine_start_date">Select routine start date</string>
    <string name="select_routine_end_date">Select routine end date</string>
    <string name="select_vital_date">Select date of which vital is measured</string>
    <string name="select_routine_start_time">Select routine start time</string>
    <string name="select_routine_end_time">Select routine end time</string>

    <string-array name="option_gender_short">
        <item>M</item>
        <item>F</item>
    </string-array>

    <string-array name="option_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="option_vital_label">
        <item>Before meal</item>
        <item>After meal</item>
    </string-array>

    <string-array name="option_prescription_before_after_meal">
        <item>Before meal</item>
        <item>After meal</item>
        <item>No preferences</item>
    </string-array>

    <string-array name="option_day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="option_album_title">
        <item>ProfilePicture</item>
        <item>Family</item>
        <item>Friends</item>
        <item>Scenery</item>
        <item>Others</item>
    </string-array>

    <string-array name="option_religion">
        <item>Christian</item>
        <item>Catholic</item>
        <item>Islam</item>
        <item>Atheist</item>
        <item>Free Thinker</item>
        <item>Hindu</item>
        <item>Buddhist</item>
        <item>Other</item>
    </string-array>

    <string-array name="option_yes_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="option_frequency">
        <item>Never</item>
        <item>Seldom</item>
        <item>Regular</item>
    </string-array>

    <string-array name="option_every_label">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string-array name="option_problem_log_category">
        <item>Communication</item>
        <item>Behavior</item>
        <item>Emotion</item>
        <item>Memory</item>
        <item>Delusion</item>
        <item>Sleep</item>
        <item>Other</item>
    </string-array>

    <string-array name="option_problem_log_category_filter">
        <item>None</item>
        <item>Communication</item>
        <item>Behavior</item>
        <item>Emotion</item>
        <item>Memory</item>
        <item>Delusion</item>
        <item>Sleep</item>
        <item>Other</item>
    </string-array>

    <string-array name="info_category_create_patient">
        <item>Personal Information|</item>
        <item>Allergy|</item>
        <item>Vital|Measure \'s vital signs to check general physical health</item>
        <item>Social History|Patient\'s past experiences and other supporting information</item>
        <item>Prescription|</item>
        <item>Routine|Patient\'s activities that are followed regularly</item>
    </string-array>

    <string-array name="info_category_view_patient">
        <item>Personal Information|</item>
        <item>Allergy|</item>
        <item>Vital|Measure patient\'s vital signs to check general physical health</item>
        <item>Social History|Patient\'s past experiences and other supporting information</item>
        <item>Prescription|</item>
        <item>Routine|Patient\'s activities that are followed regularly</item>
        <item>Problem Log|Take note of patient\'s problem</item>
        <item>Photo Album | patient photo album</item>
    </string-array>

    <string-array name="care_center_config_category">
        <item>Generate Schedule|</item>
        <item>Fixed Schedule|Care center\'s default activities to be automatically included in patients\' schedule</item>
        <item>Flexible Schedule|</item>
        <item>Notification Settings|</item>
    </string-array>
    <string name="title_activity_view_assigned_games">Patient Assigned Games</string>
    <string name="title_activity_view_schedule">Patient Schedule</string>
    <string name="title_activity_edit_schedule">Edit Schedule</string>
    <string name="tab_start_time">Start Time</string>
    <string name="tab_end_time">End Time</string>
    <string name="dialog_title_add_event">Add New Event to Patient\'s Schedule</string>
    <string name="dialog_button_add">Add</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_set_time_range">Set Event Time Range</string>
    <string name="toast_new_event_overlap">New event time should not be overlap with the existing event</string>
    <string name="title_activity_view_patient">Patient Information</string>
    <string name="title_activity_view_patient_form">Patient Information</string>
    <string name="view_more_patient_info">VIEW MORE INFORMATION</string>
    <string name="log_problem">LOG PROBLEM</string>
    <string name="dialog_title_add_new_problem_log">Add New Problem Log</string>
    <string name="add_new_problem_log">Create New Problem Log</string>
    <string name="empty_notification_list">You have no notification</string>
    <string name="title_fragment_notification">Notification</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="title_activity_notification_detail">Notification</string>
    <string name="title_fragment_care_center_config">Care Center Configuration</string>
    <string name="add_new_default_event">Add New Default Event</string>
    <string name="name">Name</string>
    <string name="repeat_every">Repeat Every</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_add">Add</string>
    <string name="button_save">Save</string>
    <string name="title_activity_care_center_config_detail">@string/title_fragment_care_center_config</string>
    <string name="error_msg_field_required">This field is required</string>
    <string name="error_msg_no_photo">Please provide a patient photo</string>
    <string name="patient_has_no_allergy">Patient has no allergy</string>
    <string name="patient_has_allergy">Patient has allergy</string>
    <string name="error_msg_no_required_allergy">Please indicate whether or not the patient has allergy</string>
    <string name="error_msg_fill_in_all_personal_info">Please fill in all the patient\'s personal information</string>
    <string name="button_yes">Yes</string>
    <string name="button_add_problem_log_anyway">Add anyway</string>
    <string name="button_view_similar_log">View similar log</string>
    <string name="button_delete">Delete</string>
    <string name="error_msg_end_date_must_be_after_start_date">End date must be after start date</string>
    <string name="error_msg_end_time_must_be_after_start_time">End time must be after start time</string>
    <string name="title_activity_capture_image_ocr">Scan Document Review</string>
    <string name="notification_group_summary_unprocessed">Patient has %1$d unprocessed updates</string>
    <string name="notification_group_summary_all_processed">All updates has been processed</string>
    <string name="dialog_title_reject_notification">Are you sure to reject the request?</string>
    <string name="provide_reason_of_notification_rejection">If yes, please provide the reason</string>
    <string name="dialog_button_reject">Reject</string>
    <string name="dialog_title_accept_notification">Are you sure to accept the request?</string>
    <string name="dialog_button_accept">Accept</string>
    <string name="reason">Reason</string>
    <string name="event_name">Event Name</string>
    <string name="allergy_name">Allergy Name</string>
    <string name="drug_name">Drug Name</string>
    <string name="button_proceed_without_save">Proceed without saving</string>
    <string name="button_proceed_with_save">Save as Draft</string>
    <string name="button_no">No</string>
    <string name="button_save_draft_changes">Save changes</string>
    <string name="recent_patient_similar_problem">Patient\'s Similar Problem in Last 7 Days</string>
    <string name="no_similar_problem_found">Patient has no similar problem</string>
    <string name="notes">Notes</string>
    <string name="from_date">From Date</string>
    <string name="category_filter">Category filter:</string>
    <string name="select_all">Select All</string>
    <string name="nric">NRIC</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="cancel">Cancel</string>
    <string name="autofill_form">Auto-fill Form</string>
    <string name="deletePhotoDialogBoxNo">No</string>
    <string name="deletePhotoDialogBoxYes">Yes</string>
    <string name="assignedGamesPatientName">Patient Name:</string>
    <string name="assignedGamesPatientID">Patient ID:</string>
    <string name="assignedGamesRunButton">Run Game</string>
    <string name="assignedGamesPreviouslyPlayedGames">Previously played game(s) in game session:</string>
    <string name="fullScreenDeleteButton">Delete</string>
    <string name="fullScreenCloseButton">Close</string>
    <string name="expandableAddPhotoHeader_title">Add New Photos</string>
    <string name="expandableAddPhotoContent_TakePhotoButton">Take Photo</string>
</resources>
