<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_content_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_content_container_padding"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout style="@style/ocr_review_table_row">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView
                            style="@style/typo_body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_all"
                            android:textAllCaps="true" />

                        <CheckBox
                            android:id="@+id/select_all_check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/med_spacing" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider" />

                    <LinearLayout style="@style/ocr_review_table_row">

                        <TextView
                            style="@style/ocr_review_table_col_1"
                            android:text="@string/nric" />

                        <EditText
                            android:id="@+id/nric_edit_text"
                            style="@style/ocr_review_table_col_2"
                            android:inputType="textCapCharacters" />

                        <CheckBox
                            android:id="@+id/nric_check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout style="@style/ocr_review_table_row">

                        <TextView
                            style="@style/ocr_review_table_col_1"
                            android:text="@string/first_name" />

                        <EditText
                            android:id="@+id/first_name_edit_text"
                            style="@style/ocr_review_table_col_2"
                            android:inputType="textCapWords"/>

                        <CheckBox
                            android:id="@+id/first_name_check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout style="@style/ocr_review_table_row">

                        <TextView
                            style="@style/ocr_review_table_col_1"
                            android:text="@string/last_name" />

                        <EditText
                            android:id="@+id/last_name_edit_text"
                            style="@style/ocr_review_table_col_2"
                            android:inputType="textCapWords"/>

                        <CheckBox
                            android:id="@+id/last_name_check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout style="@style/ocr_review_table_row">

                        <TextView
                            style="@style/ocr_review_table_col_1"
                            android:text="@string/dob" />

                        <EditText
                            android:id="@+id/dob_edit_text"
                            style="@style/ocr_review_table_col_2" />

                        <CheckBox
                            android:id="@+id/dob_check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout style="@style/ocr_review_table_row">

                        <TextView
                            style="@style/ocr_review_table_col_1"
                            android:text="@string/gender" />

                        <fr.ganfra.materialspinner.MaterialSpinner
                            android:id="@+id/gender_spinner"
                            style="@style/ocr_review_table_col_2"
                            android:layout_height="84dp"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            app:ms_alignLabels="false"
                            app:ms_arrowColor="@color/text_color_light"
                            app:ms_arrowSize="12dp"
                            app:ms_baseColor="@color/text_color_light"
                            app:ms_errorColor="@color/text_color_error"
                            app:ms_floatingLabelColor="@color/transparent"
                            app:ms_floatingLabelText=""
                            app:ms_hint="Gender"
                            app:ms_multiline="false" />

                        <CheckBox
                            android:id="@+id/gender_check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider" />

                    <RelativeLayout style="@style/ocr_review_table_row">

                        <Button
                            android:id="@+id/cancel_ocr_button"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@+id/autofill_ocr_button"
                            android:paddingLeft="@dimen/padding_flat_button"
                            android:paddingRight="@dimen/padding_flat_button"
                            android:text="@string/cancel"
                            android:textAllCaps="true"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/autofill_ocr_button"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:paddingLeft="@dimen/padding_flat_button"
                            android:text="@string/autofill_form"
                            android:textAllCaps="true"
                            android:textColor="@color/primary"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

