<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <RelativeLayout
        android:id="@+id/headerContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/primary"
        android:gravity="center"
        android:paddingBottom="32dp"
        android:paddingTop="32dp">


        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="@dimen/appLogoBigWidth"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitEnd"
            android:src="@drawable/pear_logo" />


    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shadow_below"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="42dp"
        android:paddingTop="32dp">


        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/username"
            android:inputType="text"
            android:imeOptions="actionNone"
            android:nextFocusDown="@+id/password_edit_text"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:imeOptions="actionGo"
            android:textSize="16sp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/sign_in"
            style="@style/raised_button"/>
    </LinearLayout>

</LinearLayout>
