<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/list_item_divider" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/paper_card_padding"
                android:paddingRight="@dimen/paper_card_padding"
                android:paddingTop="@dimen/paper_card_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/default_schedule_name_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="text"
                            android:nextFocusDown="@+id/default_schedule_every_edit_text" />
                    </android.support.design.widget.TextInputLayout>

                    <View
                        android:layout_width="@dimen/paper_card_row_spacing"
                        android:layout_height="0dp" />

                    <fr.ganfra.materialspinner.MaterialSpinner
                        android:id="@+id/default_schedule_start_day_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-8dp"
                        android:layout_weight="1"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        app:ms_alignLabels="false"
                        app:ms_arrowColor="@color/text_color_light"
                        app:ms_arrowSize="12dp"
                        app:ms_baseColor="@color/text_color_light"
                        app:ms_errorColor="@color/text_color_error"
                        app:ms_floatingLabelColor="@color/text_color_light"
                        app:ms_floatingLabelText="Start Day"
                        app:ms_hint="Start Day"
                        app:ms_multiline="false" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/paper_card_row_spacing"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/default_schedule_start_time_picker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/start_time"
                            android:inputType="time" />
                    </android.support.design.widget.TextInputLayout>

                    <View
                        android:layout_width="@dimen/activity_content_container_padding"
                        android:layout_height="0dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/default_schedule_end_time_picker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/end_time"
                            android:inputType="time" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/paper_card_row_spacing"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/paper_card_row_spacing"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/typo_body1"
                            android:layout_width="wrap_content"
                            android:layout_height="22dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="4dp"
                            android:text="@string/repeat_every"
                            android:textColor="@color/black_57"
                            android:textSize="18sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/default_schedule_every_edit_text"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:layout_weight="1"
                                android:inputType="number" />

                            <Spinner
                                android:id="@+id/default_schedule_every_spinner"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />
                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/paper_card_row_spacing"
                        android:layout_height="0dp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/paper_card_padding"
                android:background="@color/list_item_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/paper_card_row_spacing"
                android:paddingBottom="@dimen/paper_card_row_spacing"
                android:paddingLeft="@dimen/paper_card_padding"
                android:paddingRight="@dimen/paper_card_padding">

                <Button
                    android:id="@+id/cancel_add_default_schedule_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/add_new_default_schedule_button"
                    android:paddingLeft="@dimen/padding_flat_button"
                    android:paddingRight="@dimen/padding_flat_button"
                    android:text="@string/button_cancel"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/add_new_default_schedule_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="@dimen/padding_flat_button"
                    android:paddingRight="@dimen/padding_flat_button"
                    android:text="@string/button_add"
                    android:textAllCaps="true"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>